# OCaml-GI-ctypes-bindings-generator

./: .travis.yml  Makefile  README.md  gi-bindings-generator.install  gi-bindings-generator.opam
docs/: GI_bindings_generator.odoc  GI_bindings_generator__Bind_constant.odoc  GI_bindings_generator__Bind_enum.odoc  GI_bindings_generator__Bind_function.odoc  GI_bindings_generator__Bind_object.odoc  GI_bindings_generator__Bind_struct.odoc  GI_bindings_generator__Bind_union.odoc  GI_bindings_generator__Binding_utils.odoc  GI_bindings_generator__Conversions.odoc  GI_bindings_generator__Lexer.odoc  GI_bindings_generator__Loader.odoc  index-generated.mld  index.html  page-index.odoc
lib/: Bind_constant.ml  Bind_constant.mli  Bind_enum.ml  Bind_enum.mli  Bind_function.ml  Bind_function.mli  Bind_object.ml  Bind_object.mli  Bind_struct.ml  Bind_struct.mli  Bind_union.ml  Bind_union.mli  Binding_utils.ml  Binding_utils.mli  Loader.ml  Loader.mli  dune  jbuild
tests/: Test_bind_constant.ml  Test_bind_enum.ml  Test_bind_function.ml  Test_bind_object.ml  Test_bind_struct.ml  Test_bind_union.ml  Test_binding_utils.ml  Test_loader.ml  Test_utils.ml  dune  jbuild  test.ml
tools/: README.md  dune  gio_raw_generator.ml  glib_raw_generator.ml  gobject_raw_generator.ml  gtk3_raw_generator.ml  jbuild  raw_generator.ml
travis/: Dockerfile.centos-7  Dockerfile.debian-buster  Dockerfile.fedora-29  Dockerfile.ubuntu-16.04  Dockerfile.ubuntu-17.04  Dockerfile.ubuntu-17.10  Dockerfile.ubuntu-18.04  Dockerfile.ubuntu-18.10  initialize_ocaml_environment.sh  install-deps  install-macos-deps  (+1 more)
(+2108 files in other folders)
